--- a/exercicios/modulo-03/ex022/fundo003.html
+++ b/exercicios/modulo-03/ex022/fundo003.html
@@ -1,51 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Posição dos fundos</title>
     <style>
-        body {
-            background-color: rgb(255, 255, 255);
-            font: 13pt Arial;
-            color: black;
-        }
+      div.bloco {
+        background-image: url(imagens/wallpaper002.jpg);
+        height: 200px;
+        border: 1px solid black;
+        border-radius: 20px;
+        margin: 10px;
+      }
 
-        div { 
-            width: 90%;
-            height: 400px;
-            background-color: lightgray;
-            background-image: url('imagens/wallpaper003.jpg');
-            border: 1px solid black;
-        }
-
-        div#area001 {
-            background-position: left top;
-        }
-
-        div#area002 {
-            background-position: right bottom;
-        }
-
-        div#area003 {
-            background-position: center top;
-        }
-
-        div#area004 {
-            background-position: center center;
-        }
+      div#q1 {
+        background-position: left top;
+      }
+      div#q2 {
+        background-position: left center;
+      }
+      div#q3 {
+        background-position: right bottom;
+      }
+      div#q4 {
+        background-position: center center;
+      }
     </style>
-</head>
-<body>
-    <h1>Posição de um background</h1>
-
-    <h2>background-position: left top;</h2>
-    <div id="area001"></div>
-    <h2>background-position: right bottom;</h2>
-    <div id="area002"></div>
-    <h2>background-position: center top;</h2>
-    <div id="area003"></div>
-    <h2>background-position: center center;</h2>
-    <div id="area004"></div>
-</body>
+  </head>
+  <body>
+    <div class="bloco" id="q1"></div>
+    <div class="bloco" id="q2"></div>
+    <div class="bloco" id="q3"></div>
+    <div class="bloco" id="q4"></div>
+  </body>
 </html>
