--- a/exercicios/modulo-03/ex022/fundo005.html
+++ b/exercicios/modulo-03/ex022/fundo005.html
@@ -1,44 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Posicionamento</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        h1 {
-            /*font-variant: small-caps;*/
-            text-transform: uppercase;
-        }
-
-        .container {
-            height: 50vh;
-            border: 4px solid black;
-            position: relative;
-            background-color: lightgray;
-        }
-
-        .content {
-            margin: 0px;
-            position: absolute;
-            background-color: gray;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-        }
+      body {
+        height: 98vh;
+        border: 1px dashed black;
+        background-image: url(imagens/wallpaper003.jpg);
+        background-position: left top;
+        background-repeat: no-repeat;
+      }
     </style>
-</head>
-<body>
-    <div class="container">
-        <div class="content">
-            <h1>
-                Texto Centralizado
-            </h1>
-        </div>
-    </div>
-</body>
+  </head>
+  <body></body>
 </html>
