download e organizacao dos arquivos desafio 12, video 20 modulo 3

--- a/exercicios/modulo-03/ex022/fundo006.html
+++ b/exercicios/modulo-03/ex022/fundo006.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
       body {
-        height: 100vh;
+        /* height: 100vh;
         background-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center center;
-        background-repeat: no-repeat;
         background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed; */
+
+        background: black url("imagens/wallpaper002.jpg") center center/cover
+          no-repeat fixed;
       }
 
       main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -28,6 +32,58 @@
   <body>
     <main>
       <h1>Teste de Imagem de Fundo</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+        voluptatibus nemo veniam recusandae esse nulla hic blanditiis, optio
+        asperiores. Repellendus ipsum mollitia harum rem necessitatibus minus.
+        Commodi accusantium beatae quidem. Labore eum non aliquid, voluptatibus
+        aspernatur corporis facilis id ea laudantium ullam eligendi deleniti
+        perferendis modi necessitatibus reprehenderit voluptas quo ad nemo.
+        Eligendi doloribus pariatur ratione modi iste eveniet possimus.
+        Reiciendis asperiores magni dolorem vitae repellendus? Quasi, error
+        nihil minima fugiat laudantium modi molestias cupiditate provident,
+        ratione illum consectetur quia sit, cumque magni veritatis ab
+        perspiciatis vitae eveniet deleniti cum!
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+        voluptatibus nemo veniam recusandae esse nulla hic blanditiis, optio
+        asperiores. Repellendus ipsum mollitia harum rem necessitatibus minus.
+        Commodi accusantium beatae quidem. Labore eum non aliquid, voluptatibus
+        aspernatur corporis facilis id ea laudantium ullam eligendi deleniti
+        perferendis modi necessitatibus reprehenderit voluptas quo ad nemo.
+        Eligendi doloribus pariatur ratione modi iste eveniet possimus.
+        Reiciendis asperiores magni dolorem vitae repellendus? Quasi, error
+        nihil minima fugiat laudantium modi molestias cupiditate provident,
+        ratione illum consectetur quia sit, cumque magni veritatis ab
+        perspiciatis vitae eveniet deleniti cum!
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+        voluptatibus nemo veniam recusandae esse nulla hic blanditiis, optio
+        asperiores. Repellendus ipsum mollitia harum rem necessitatibus minus.
+        Commodi accusantium beatae quidem. Labore eum non aliquid, voluptatibus
+        aspernatur corporis facilis id ea laudantium ullam eligendi deleniti
+        perferendis modi necessitatibus reprehenderit voluptas quo ad nemo.
+        Eligendi doloribus pariatur ratione modi iste eveniet possimus.
+        Reiciendis asperiores magni dolorem vitae repellendus? Quasi, error
+        nihil minima fugiat laudantium modi molestias cupiditate provident,
+        ratione illum consectetur quia sit, cumque magni veritatis ab
+        perspiciatis vitae eveniet deleniti cum!
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+        voluptatibus nemo veniam recusandae esse nulla hic blanditiis, optio
+        asperiores. Repellendus ipsum mollitia harum rem necessitatibus minus.
+        Commodi accusantium beatae quidem. Labore eum non aliquid, voluptatibus
+        aspernatur corporis facilis id ea laudantium ullam eligendi deleniti
+        perferendis modi necessitatibus reprehenderit voluptas quo ad nemo.
+        Eligendi doloribus pariatur ratione modi iste eveniet possimus.
+        Reiciendis asperiores magni dolorem vitae repellendus? Quasi, error
+        nihil minima fugiat laudantium modi molestias cupiditate provident,
+        ratione illum consectetur quia sit, cumque magni veritatis ab
+        perspiciatis vitae eveniet deleniti cum!
+      </p>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
         voluptatibus nemo veniam recusandae esse nulla hic blanditiis, optio
