--- a/desafios/modulo-02/d012/index.html
+++ b/desafios/modulo-02/d012/index.html
@@ -34,7 +34,7 @@
     </section>
     <!-- prettier-ignore -->
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -70,7 +70,7 @@
     </section>
     <!-- prettier-ignore -->
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -109,7 +109,7 @@
       <p>
         Site criado por
         <a href="https://gustavoguanabara.github.io/" target="_blank"
-          >Janilton</a
+          >João Arthur Bandeira</a
         >
         para o
         <a href="https://cursoemvideo.com/" target="_blank">CursoemVideo</a>
