--- a/exercicios/modulo-04/ex025/form003.html
+++ b/exercicios/modulo-04/ex025/form003.html
@@ -9,41 +9,76 @@
   <body>
     <h1>Teste de formulário</h1>
     <form action="cadastro.php" method="get">
-      <p>
-        <label for="inome">Nome</label>
-        <input
-          type="text"
-          name="nome"
-          id="inome"
-          required
-          maxlength="30"
-          placeholder="Nome completo"
-          autocomplete="name"
-          required />
-      </p>
-      <p>
-        <label for="imedia">Média</label>
-        <input
-          type="number"
-          name="media"
-          id="imedia"
-          min="0"
-          max="10"
-          placeholder="0 a 10"
-          step="0.1"
-          value="5"
-          required />
-      </p>
-      <label for="imes">Período Letivo</label>
-      <input type="month" name="mes" id="imes" value="2023-03" />
-      <p>
-        <label for="idia">Dia da Prova</label>
-        <input type="date" name="dia" id="idia" value="2023-03-14" />
-      </p>
-      <p>
-        <label for="ihora">Horário da Prova</label>
-        <input type="time" name="hora" id="ihora" />
-      </p>
+      <fieldset>
+        <legend>Dados pessoais</legend>
+        <p>
+          <label for="inome">Nome</label>
+          <input
+            type="text"
+            name="nome"
+            id="inome"
+            required
+            maxlength="30"
+            placeholder="Nome completo"
+            autocomplete="name"
+            required />
+        </p>
+        <p>
+          <label for="imedia">Média</label>
+          <input
+            type="number"
+            name="media"
+            id="imedia"
+            min="0"
+            max="10"
+            placeholder="0 a 10"
+            step="0.1"
+            value="5"
+            required />
+        </p>
+        <label for="imes">Período Letivo</label>
+        <input type="month" name="mes" id="imes" value="2023-03" />
+        <p>
+          <label for="idia">Dia da Prova</label>
+          <input type="date" name="dia" id="idia" value="2023-03-14" />
+        </p>
+        <p>
+          <label for="ihora">Horário da Prova</label>
+          <input type="time" name="hora" id="ihora" />
+        </p>
+        <p>
+          <label for="iemail">E-mail</label>
+          <input
+            type="email"
+            name="email"
+            id="iemail"
+            autocomplete="email required" />
+        </p>
+        <p>
+          <label for="itel">Telefone</label>
+          <input
+            type="tel"
+            name="tel"
+            id="itel"
+            autocomplete="tel"
+            pattern="\(\d{2}\)\d{4,5}-\d{4}$"
+            required
+            placeholder="(xx)xxxx-xxxx" />
+        </p>
+      </fieldset>
+      <fieldset>
+          <legend>Sexo</legend>
+          <input type="radio" name="sexo" id="isxmas" value="M"><label for="isxmas">Masculino</label></input><br>
+          <input type="radio" name="sexo" id="isxfem" value="F"><label for="isxfem">Feminino</label></input><br>
+    </fieldset>
+    <fieldset>
+        <legend>Esportes favoritos</legend>
+        <input type="checkbox" name="esbas" id="iesbas"><label for="iesbas">Basquete</label><br>
+        </input><input type="checkbox" name="esfut" id="iesfut"><label for="iesfut">Futebol</label><br>
+        </input><input type="checkbox" name="esnat" id="iesnat"><label for="iesnat">Natação</label><br>
+        </input><input type="checkbox" name="esten" id="iesten"><label for="iesten">Tênis</label><br>
+        </input>
+    </fieldset>
       <p>
         <input type="submit" value="Enviar" />
         <input type="reset" value="Limpar" />
