--- a/exercicios/modulo-04/ex025/form004.html
+++ b/exercicios/modulo-04/ex025/form004.html
@@ -43,7 +43,11 @@
           id="imsg"
           cols="30"
           rows="10"
+          maxlength="20"
+          style="resize: none"
           placeholder="Sua mensagem aqui..."></textarea>
+        <!-- propriedade css resize:none: para evitar que o usuário altere o tamanho do textarea. -->
+        <!-- atributo maxlength: para limitar a quantidade de caracteres que o usuário pode digitar  -->
       </p>
       <p>
         <input type="submit" value="Enviar" />
