exercicios 002 media query

--- a/exercicios/modulo-04/ex026/mq002/index.html
+++ b/exercicios/modulo-04/ex026/mq002/index.html
@@ -9,11 +9,11 @@
     <link
       rel="stylesheet"
       href="estilos/retrato.css"
-      media="screen and (orienation: portrait)" />
+      media="screen and (orientation: portrait)" />
     <link
       rel="stylesheet"
       href="estilos/paisagem.css"
-      media="screen and (orienation: landscape)" />
+      media="screen and (orientation: landscape)" />
   </head>
   <body>
     <h1>Mude a orientação do seu dispositivo.</h1>
